--- a/dev.geopjr.Turntable.yaml
+++ b/dev.geopjr.Turntable.yaml
@@ -16,6 +16,7 @@ finish-args:
   - --talk-name=org.freedesktop.DBus
   - --filesystem=~/.mozilla/firefox/firefox-mpris/:ro
   - --filesystem=~/.var/app/org.mozilla.firefox/.mozilla/firefox/firefox-mpris/:ro
+  - --filesystem=~/.var/app/org.mozilla.firefox/data/firefox-mpris/:ro
   - --filesystem=~/.librewolf/firefox/firefox-mpris/:ro
   - --filesystem=~/.var/app/io.gitlab.librewolf-community/data/firefox-mpris/:ro
   - --filesystem=~/.floorp/firefox/firefox-mpris/:ro
@@ -27,7 +28,9 @@ finish-args:
   - --filesystem=~/.var/app/ca.edestcroix.Recordbox/data/Recordbox/:ro
   - --filesystem=~/.var/app/org.gnome.Rhythmbox3/cache/rhythmbox/album-art/:ro
   - --filesystem=~/.var/app/org.gnome.Lollypop/cache/lollypop/:ro
+  - --filesystem=~/.var/app/io.github.nokse22.high-tide/cache/images:ro
   - --filesystem=~/.cache/:ro
+  - --filesystem=/tmp:ro
   - --filesystem=xdg-data/flatpak:ro
   - --filesystem=/var/lib/flatpak:ro
   - --filesystem=xdg-data/applications:ro
